fix the midleware and save the post