@@ -1,31 +1,21 @@
 package com.ihajji.backend.user.config;
 
-
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
-public class UserPrincipal implements UserDetails {
-    private final Long id;
-    private final String email;
-    private final String password;
-    private final Collection<? extends GrantedAuthority> authorities;
+public record UserPrincipal(Long id, String username, String role) implements UserDetails {
 
-    public UserPrincipal(Long id, String email, String password, String role) {
-        this.id = id;
-        this.email = email;
-        this.password = password;
-        // Prefix with ROLE_ so .hasRole("USER") works correctly in Config
-        this.authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        // This converts "USER" to "ROLE_USER" which matches .hasAnyRole("USER")
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
     }
 
-    public Long getId() { return id; }
-
-    @Override public String getUsername() { return email; }
-    @Override public String getPassword() { return password; }
-    @Override public Collection<? extends GrantedAuthority> getAuthorities() { return authorities; }
+    @Override public String getPassword() { return null; }
+    @Override public String getUsername() { return username; }
     @Override public boolean isAccountNonExpired() { return true; }
     @Override public boolean isAccountNonLocked() { return true; }
     @Override public boolean isCredentialsNonExpired() { return true; }
